add links projects

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="files/swiper.min.css?_v=20230403161542">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230403161542">
+    <link rel="stylesheet" href="files/swiper.min.css?_v=20230404160352">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230404160352">
     <title>Novikov A.</title>
 </head>
 
@@ -80,7 +80,7 @@
                                         <li class="descr-item">WEBPACK</li>
                                     </ul>
                                 </div>
-                                <a href="" class="slider-link _slider-link icon-right">go to project</a>
+                                <div class="slider-link _slider-link icon-right">Project is under development</div>
                             </div>
                             <div class="slider slider-capico  swiper">
                                 <div class="slider-capico-wrapper _slider-wrapper swiper-wrapper">
@@ -233,7 +233,7 @@
                         </div>
                         <div class="relvise animate-item _slider">
                             <div class="slider-info _slider-info">
-                                <h3 class="slider-title _slider-title">Relvise</h3>
+                                <h3 class="slider-title _slider-title">SPACE PEARL</h3>
                                 <div class="slider-descr _slider-descr">
                                     <div class="descr-title">Design:</div>
                                     <div class="descr-subtitle">figma</div>
@@ -288,7 +288,7 @@
                                         <li class="descr-item">WEBPACK</li>
                                     </ul>
                                 </div>
-                                <a href="" class="slider-link _slider-link icon-right">go to project</a>
+                                <a href="https://6metrovii.github.io/Alex-Smith/" class="slider-link _slider-link icon-right">go to project</a>
                             </div>
                             <div class="slider slider-alex  swiper">
                                 <div class="slider-alex-wrapper _slider-wrapper swiper-wrapper">
@@ -467,6 +467,6 @@
         </ul>
     </div>
 </footer>
-    <script src="js/app.min.js?_v=20230403161542"></script>
+    <script src="js/app.min.js?_v=20230404160352"></script>
 </body>
 </html>
