--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="files/swiper.min.css?_v=20230404160352">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230404160352">
+    <link rel="stylesheet" href="files/swiper.min.css?_v=20230404163758">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230404163758">
     <title>Novikov A.</title>
 </head>
 
@@ -330,7 +330,7 @@
                                         <li class="descr-item">WEBPACK</li>
                                     </ul>
                                 </div>
-                                <a href="" class="slider-link _slider-link icon-right">go to project</a>
+                                <a href="https://6metrovii.github.io/Boldo/" class="slider-link _slider-link icon-right">go to project</a>
                             </div>
                             <div class="slider slider-boldo   swiper">
                                 <div class="slider-boldo-wrapper _slider-wrapper swiper-wrapper">
@@ -467,6 +467,6 @@
         </ul>
     </div>
 </footer>
-    <script src="js/app.min.js?_v=20230404160352"></script>
+    <script src="js/app.min.js?_v=20230404163758"></script>
 </body>
 </html>
